--- a/Pages/index.html
+++ b/Pages/index.html
@@ -5,7 +5,7 @@
         <meta name="description" content="marketing website">
         <meta name="viewport" content="width=device-width,intial-scale=1.0">
         <title>Go oN</title>
-        <link rel="stylesheet" href="style.css">
+        <link rel="stylesheet" href="../style.css">
     </head>
 
     <body>
@@ -43,9 +43,9 @@
                             <h2>Royalty free stock images, photos, and videos</h2>
                         </div>
             </section>
-            <img width="452" src="a.jpg">
-            <img width="425" src="f.jpg">
-            <img width="452" src="k.jpg">
+            <img width="452" src="Images/a.jpg">
+            <img width="425" src="Images/f.jpg">
+            <img width="452" src="Images/k.jpg">
             <div class="container">
                     <section id="main">
                         <h1>Welcome</h1>
