--- a/Pages/verify.html
+++ b/Pages/verify.html
@@ -5,7 +5,7 @@
         <meta name="description" content="marketing website">
         <meta name="viewport" content="width=device-width,intial-scale=1.0">
         <title>Go oN</title>
-        <link rel="stylesheet" href="style.css">
+        <link rel="stylesheet" href="../style.css">
     </head>
 
     <body><header id="main-header">
